tests/fixtures/invalid/str_add_bool.py
# Cannot add Str and Bool
x: str = "hello" + True
